<resources>
    <string name="app_name">We Women</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="_1_turli_tumanlik">1.Turli-tumanlik</string>
    <string name="qoida_1">Aniq o\'ylab chiqilgan, turli zarur mahsulotlarni o\'z ichiga oluvchi muvozanatlashtirolgan ovqatlanish tarzi.</string>
    <string name="_2_tartib_va_davriylik">2.Tartib va davriylik</string>
    <string name="qoida_2">Kuniga 4 martadan kam bo\'lmagan va har kuni belgilangan bir vaqda ovqatlanish. Ular orasidagi tanaffus 3.5 soatdan oshib ketmasligi lozim.</string>
    <string name="qoida_4">Ushbu mahsulotlar organizmdagi suv va tuz balansini buzish, ovqat hazm qilish hamda immun tizimini ishdan chiqarish, shuningdek, semirib ketish kabi yoqimsiz oqibatlarga olib kelishi mumkin.</string>
    <string name="_3_har_kuni_yangi_uzilgan_meva_va_sabzavotlarni_iste_mol_qilish">3.Har kuni yangi uzilgan meva va sabzavotlarni iste\'mol qilish</string>
    <string name="qoida_3">Meva va sabzavotlar salatlarda, qirg\'ichdan chiqarilgan holda, sharbat ko\'rinishida va albatta butunligicha iste\'mol qilinishi mumkin.</string>
    <string name="_4_tuz_va_shakar_gazli_ichimliklarni_minimum_darajaga_cheklash">4.Tuz va shakar, gazli ichimliklarni minimum darajaga cheklash</string>
    <string name="taomlarni_tayyorlash_usuli_bug_da_tayyorlash_dimlab_va_qaynatib_pishirish">5.Taomlarni tayyorlash usuli - bug\'da tayyorlash, dimlab va qaynatib pishirish</string>
    <string name="qoida_5">Bolalarning ratsioniga quruq mevalarni ham kiritish ayni muddao hisoblanadi.</string>
    <string name="_8_shirinlik_iste_molini_kamaytiring">8.Shirinlik iste’molini kamaytiring</string>
    <string name="qoida_8">Shakar va konfetlarni foydali kulcha nonlarga almashtiring. Ammo shunda ham mahsulot qadog‘ini yaxshilab o‘qing, chunki ba’zi kulchalarga qo‘shimcha sifatida ko‘p shakar qo‘shilishi mumkin. Butun donli kulchalarni xarid qiling, bu o‘zingiz va farzandingiz salomatligi uchun eng yaxshi tanlov bo‘ladi. Esda tuting, bir stakan gazli ichimlikda 10 qoshiq shakar bo‘ladi, shu tufayli uni uyda tayyorlangan kompot yoki oddiy suvga almashtiring.</string>
    <string name="_7_kompyuter_o_yinlariga_sarflanadigan_vaqtni_nazorat_qiling">7.Kompyuter o‘yinlariga sarflanadigan vaqtni nazorat qiling</string>
    <string name="qoida_7">Ba’zi kompyuter o‘yinlari bolaga ijobiy ta’sir o‘tkazsa-da, tadqiqotlar kompyuter o‘yinlarini ko‘p o‘ynaydigan bolalar boshqalarga qaraganda, depressiya va agressiv xulqqa ko‘proq moyil bo‘lishi ko‘rsatadi. Ko‘ngilochar videoo‘yinlarni ta’lim beruvchi o‘yinlarga almashtiring, shunda o‘yin bola uchun nafaqat qiziqarli, balki foydali ham bo‘ladi.</string>
    <string name="_6_bolalarni_uy_ishlariga_jalb_qiling">6.Bolalarni uy ishlariga jalb qiling</string>
    <string name="qoida_6">Ularning sizga ovqat tayyorlashda yordam berishlariga qo‘yib bering. Faqat bu vaqtda salomatlik uchun foydali bo‘lgan narsa — baliq, sabzavotli dimlama yoki bo‘tqa tayyorlayotganingizga ishonchingiz komil bo‘lsin. O‘zlari o‘zlariga ovqat tayyorlaydigan bolalar odatda uni keyinroq o‘zlari huzur bilan yeb qo‘yadi. Butun oilani dasturxon atrofiga yig‘ing. Bu sizga bola nimani, qancha yeganini nazorat qilish imkonini beradi.</string>
    <string name="yosh_onalarga_foydali_10_ta_maslahat">Yosh onalarga foydali 10 ta maslahat</string>
    <string name="mas">Kichkintoyingizni parvarish qilar ekansiz, har doim o‘z-o‘zingizga savol berasiz: men hammasini risoladagidek bajaryapmanmi? Kichkintoy esa kundan-kun yangi qiliqlar chiqarib, sizni bu haqda takror-takror o‘ylashga, ikkilanishga majbur qiladi.\n\nShunday paytlarda, o‘z vaqtida berilgan maslahat oltinga teng bo‘ladi! Quyida oliy toifali pediatr shifokor Hamroyeva Marziya Ashurovna har bir yosh ona bilishi lozim bo‘lgan masalalarga e’tiborni qaratadi.</string>
    <string name="maslahat_1">«Mehribon» onalar kun davomida bolalari terisiga nimalarni surishmaydi-ya! Bolalar uchun krem, yog‘, upa, antibakterial xususiyatlarga ega sovunlar, maxsus suyuqliklar shimdirilgan salfetkalar… Agar bola 3 oylik bo‘lgan bo‘lsa, unda bo‘g‘imlar «pishishi» va diatez (teri yallig‘lanishi) kuzatilmaydi. Bolakay uchun maxsus kosmetikaning hojati yo‘q, kundalik cho‘miltirish va havo vannalarining o‘zi yetarli. Har qanday holatda ham bola terisiga me’yordan ortiq yog‘ yoki krem surmang, ular me’yorda surilgach, bolani tagliklarga o‘rab-chirmab tashlamang, yog‘ yoki krem ma’lum muddat ichida teriga so‘rilishi lozim. Aks holda, so‘rilmagan massa taglik teshikchalarini to‘sib qo‘yadi va uning namlikni tutish xususiyatiga putur yetadi, teri muammolari ham kuchayadi.</string>
    <string name="_1_kichkintoyni_bolalar_kosmetikasiga_ko_mib_tashlamang">1. Kichkintoyni bolalar kosmetikasiga «ko‘mib tashlamang!»</string>
    <string name="_2_bolani_aravacha_bilan_birga_zinadan_olib_tushmang">2. Bolani aravacha bilan birga zinadan olib tushmang!</string>
    <string name="maslahat_2">Bu siz uchun xavfli bo‘libgina qolmay, bola uchun ham katta xavf tug‘dirishi mumkin. Ko‘p qavatli uylarda lift yo‘qmi yoki vaqtincha ishlamayaptimi? Unda kichkintoy bir muddat uyda qolgani ma’qul. Faqat, uni shunday «joylashtirib» qo‘yingki, u yiqilish yoki polda umbaloq oshishga imkon topolmasin. Aravachani bir qo‘lda, qiyshaytirib tutmang, ikki qo‘lda oldinga qarab haydaganingiz ma’qul. Bunda vazn muvozanatda bo‘lishiga e’tibor bering. Shundagina kichkintoy xavfsiz bo‘ladi, siz ham bel og‘rig‘idan shikoyat qilmaysiz.</string>
    <string name="_3_terlashiga_yo_l_qo_ymang">3. Terlashiga yo‘l qo‘ymang!</string>
    <string name="maslahat_3">Bola yig‘laganda, injiqlik qilganida, qo‘rqqanida yoki o‘ta xursand bo‘lganida, ter munchoqlariga ko‘miladi. Sog‘lom, emizikli bola esa issiq sharoitda ham deyarli terlamaydi, undan sutning yoqimli hidi kelib turadi. Ilk yoshlarida uning ter bezlari yaxshi shakllanmagan bo‘ladi va to‘liq ish faoliyatida bo‘lmaydi. Agar siz uni ob-havoga mos kiyintirgan bo‘lsangiz, issiqlashi ehtimoldan yiroq, lekin uning ko‘ylakchalari ho‘l bo‘lsa, pediatrga murojaat qilganingiz ma’qul. Bu asabning ter ajratish muvozanati buzilganidan darak beruvchi raxit kasalligi belgisi bo‘lishi mumkin.</string>
    <string name="_4_bolalar_xonasidagi_tungi_chiroqni_o_chiring">4. Bolalar xonasidagi tungi chiroqni o‘chiring!</string>
    <string name="maslahat_4">Ko‘pincha, onalar bolalar xonasida tungi chiroq yoki qandilga mahkamlangan maxsus moviy rangli chiroq yoqib qo‘yishadi. Bu bolalarni tinchlantiradi va bolaning ko‘zlariga uyqu kelishiga yordam beradi, deb hisoblanadi. Biroq, doimiy notabiiy nur bola organizmida bioritmlarni nazorat qiluvchi va tetiklikni saqlovchi melatonin gormoni faoliyatini susaytiradi. Natijada, biologik soatlar davomiyligi buzilib, bola o‘zini yomon his qila boshlaydi, kunduzi injiqlanadi, tunda yaxshi uxlolmaydi.</string>
    <string name="_5_bolaga_ichiradigan_suvga_shakar_qo_shmang">5. Bolaga ichiradigan suvga shakar qo‘shmang!</string>
    <string name="maslahat_5">Birinchidan, siz maqsadga yetolmaysiz: shirin suyuqliklar chanqoqni yaxshi qondirmaydi. Ikkinchidan, bolani ilk yoshidanoq shirin ta’mga o‘rgatib qo‘yasiz, u oddiy suvni ichishdan qattiq bosh tortadi. Uchinchidan, uning shakarni parchalovchi oshqozon osti beziga bosim tushib, diabetga moyillik ko‘rsatkichini oshirasiz.</string>
    <string name="_6_bolaga_choy_bermang">6. Bolaga choy bermang!</string>
    <string name="maslahat_6">Hatto, suyuq damlangan choy ham bola organizmida ilk yoshlardayoq temir o‘zlashtirilishini susaytiradi va temir tanqisligiga moyillik keltirib chiqaradi. Bola uchun eng foydali ichimlik — qaynatilgan shakarsiz suv. Do‘konlarda qadoqlangan suv bo‘lsa, undan ham yaxshi. Suv o‘rniga turli meva kompotlarini berishingiz mumkin (muzlatilgan, quritilgan yoki yangi). Kompotlar yangi tayyorlangan, xona iliqligida va shirinliklarsiz bo‘lishi lozim. Bolaga ovqatlantirish davomida tez-tez suyuqlik berib turing, biroq, bu u juda ko‘p suyuqlik ichishi shart, degani emas. Ortiqcha suyuqlik uning buyragiga bosim o‘tkazadi. U kun davomida me’yorida suyuqlik ichishi kerak. Harorati ko‘tarilganda, ich ketishda va xona harorati yuqori bo‘lganda ko‘proq ichishi maqsadga muvofiq.</string>
    <string name="_7_shamollagan_bo_lsangiz_ham_ko_krak_suti_bilan_emizing">7. Shamollagan bo‘lsangiz ham, ko‘krak suti bilan emizing!</string>
    <string name="maslahat_7">Ba’zan onalar shamollaganda, gripp bo‘lganida bolani ko‘krak suti bilan emizmaslikni ma’qul ko‘radilar. Bolaga kasallik yuqishidan qo‘rqish tabiiy, biroq, shuni unutmangki, gripp havo-tomchi yo‘li orqali yuqadi, emizish bilan emas. Bolani 5-6 qavat tutilgan doka ostidan emizing, kun davomida dokani bir necha marta almashtiring. Avval ishlatilgan dokadan foydalanmoqchi bo‘lsangiz, ularni qaynatib oling. Sizga yordam beradigan odam bo‘lmasa, faqat doka niqob tutib, bolani parvarish qilishingiz mumkin.</string>
    <string name="_8_bolani_yotqizganda_tez_tez_ikki_yonboshga_almashtirib_turing">8. Bolani yotqizganda tez-tez ikki yonboshga almashtirib turing!</string>
    <string name="maslahat_8">Amerikalik pediatrlar har 16 ta boladan bittasida bosh suyagi deformatsiyasini aniqlashdi. Buning sababi, ular uzoq vaqt belga tayanib yotgan va D vitamini tanqisligidan aziyat chekadi. Bolaga ushbu qimmatli vitaminni yetkazib berishni unutmang. Chunki, bu vitamin tanqisligida bola suyagi yumshoq, bosh suyagi kengaygan bo‘ladi. Siz bunday bo‘lmasligi uchun uni yotqizganingizda to buni o‘zi mustaqil o‘rganib olmaguncha u yonboshdan bu yonboshga o‘girib turing. Kengaygan bosh suyagi bolaning tashqi ko‘rinishiga salbiy ta’sir ko‘rsatibgina qolmay, asab tizimiga ham zarar yetkazadi: bosh suyagi deformatsiyasi bosh miya shakli buzilishi, qisilishi va unda qon aylanishi buzilishiga sabab bo‘ladi. Natijada, bolaning psixomotor rivojlanishdan ortda qolishi kuzatiladi.</string>
    <string name="_9_so_rg_ichdan_voz_kechmang">9. So‘rg‘ichdan voz kechmang!</string>
    <string name="maslahat_9">Ko‘pchilik onalar so‘rg‘ichlar bolada tishlar o‘sishiga salbiy ta’sir ko‘rsatadi, degan tushunchada. Bu noto‘g‘ri! So‘rg‘ich bola tug‘ilganidan boshlab, ilk oylarda so‘rishga ehtiyoj kuchli bo‘lgan paytlarda juda kerak. Aks holda, u barmog‘ini, lablarini, tagliklar chetlarini, qalam uchlarini so‘rishni boshlaydi. Bu, ayniqsa, bola sun’iy oziqlantirish (ona sutidan boshqa sutli aralashmalar) bilan parvarish qilinayotgan bo‘lsa, o‘zining jiddiy ta’sirini ko‘rsatadi. Chunki, ona ko‘ksidagidan ko‘ra, so‘rg‘ich idishlardagi sutli aralashmalar tez oqadi va bola uni so‘rib olishga ulgurmay qoladi. Bu unga ovqatlanishda ichki noqulaylik tug‘diradi. So‘rish harakati bolani tinchlantirib, uxlashiga yordam beradi. Bola 4-6 oylik bo‘lsa va so‘rg‘ich bilan uxlasa, qattiq yig‘laganda uni tinchlantiruvchi o‘rnida qabul qilsa, buning qo‘rqinchli joyi yo‘q. Bola uxlagach, so‘rg‘ichni olib qo‘ying. Bolani vaqti-vaqti bilan so‘rg‘ichsiz yurishga o‘rgatib boring.</string>
    <string name="_10_dorilarni_retsept_asosida_bering">10. Dorilarni retsept asosida bering!</string>
    <string name="maslahat_10">Odatda, emizikli bolalar uchun kukun-dorilar yozib beriladi. Agar kerakli preparatlar dori qutingizda topilsa, pediatr sizga uning qaysi qismini bolaga ichirish mumkinligini aytadi. Uni nima bilan ichirishni bilib oling: ba’zi vositalar sut bilan ichirilsa, ta’sir kuchi yo‘qoladi, boshqalarini sutsiz ichirib bo‘lmaydi… O‘tkir pichoq bilan ajratib olingan bo‘lakchani ikkita choy qoshig‘i bilan ezing, qaynatilgan suv va ko‘krak suti yoki tayyor bolalar sut mahsuloti bilan aralashtiring.\n\n Bolaning burnini yopib, og‘zini ochishga majbur qilmang, suyuqlik boshqa yo‘lga ketib qolishi yoki bolakay nafas yo‘lini bo‘g‘ib qo‘yishi mumkin. Bolaning yonog‘ini bosh va ko‘rsatkich barmog‘ingizda bosibroq ushlab, choy qoshiqdagi dorini tezgina ichirib yuboring.</string>
</resources>