<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.FoodFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:backgroundTint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/_1_turli_tumanlik"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/qoida_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:backgroundTint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/_2_tartib_va_davriylik"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/qoida_2"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:backgroundTint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/_3_har_kuni_yangi_uzilgan_meva_va_sabzavotlarni_iste_mol_qilish"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/qoida_3"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:backgroundTint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/_4_tuz_va_shakar_gazli_ichimliklarni_minimum_darajaga_cheklash"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/qoida_4"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:backgroundTint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/taomlarni_tayyorlash_usuli_bug_da_tayyorlash_dimlab_va_qaynatib_pishirish"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/qoida_5"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:backgroundTint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/_6_bolalarni_uy_ishlariga_jalb_qiling"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/qoida_6"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:backgroundTint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/_7_kompyuter_o_yinlariga_sarflanadigan_vaqtni_nazorat_qiling"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/qoida_7"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:backgroundTint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/_8_shirinlik_iste_molini_kamaytiring"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/qoida_8"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>
</ScrollView>